[package]
name = "dkfs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]

[dependencies]
serde = "1.0.70"
serde_derive = "1.0.70"
bitflags = "1.0.3"
static_assertions = "0.2.5"
failure = "0.1.1"
bincode = "1.0.1"
libc = "0.2"
nix = "0.11.0"
slog = "2.2.3"
slog-try = "0.2.0"
im = "11.0.1"
byteorder = "1.2.4"