[package]
name = "dkfs"
version = "0.1.2"
authors = ["Yilin Chen <sticnarf@gmail.com>"]

[dependencies]
serde = "1.0.70"
serde_derive = "1.0.70"
bitflags = "1.0.3"
failure = "0.1.1"
failure_derive = "0.1.1"
bincode = "1.0.1"
nix = "0.11.0"
im = "11.0.1"
byteorder = "1.2.4"

[dev-dependencies]
rand = "0.5"